Closed
Bug 1602116
Opened 6 years ago
Closed 6 years ago
Port bug 1601800 to mailnews: Remove nsIPrintingPromptService.showPrintProgressDialog's nsIWebBrowserPrint parameter
Categories
(MailNews Core :: Printing, defect)
MailNews Core
Printing
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 73.0
People
(Reporter: aceman, Assigned: aceman)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.15 KB,
patch
|
rjl
:
review+
|
Details | Diff | Splinter Review |
Port bug 1601800.
Compilation fails with:
mailnews/base/src/nsMsgPrintEngine.cpp:340:49: error: too many arguments to function call, expected 7, have 8
Severity: normal → blocker
Summary: Port bug 1601800: Remove nsIPrintingPromptService.showPrintProgressDialog's nsIWebBrowserPrint parameter → Port bug 1601800 to mailnews: Remove nsIPrintingPromptService.showPrintProgressDialog's nsIWebBrowserPrint parameter
Updated•6 years ago
|
Attachment #9114274 -
Flags: review?(rob) → review+
Pushed by acelists@atlas.sk:
https://hg.mozilla.org/comm-central/rev/b4407c454f23
Port bug 1601800: remove unneeded nsIWebBrowserPrint argument to nsIPrintingPromptService.showPrintProgressDialog. r=rjl
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Comment 3•6 years ago
|
||
The try run from comment #1 is pretty busted.
Yes, but at least it now fails compiling m-c files so we still investigate what is going on.
You need to log in
before you can comment on or make changes to this bug.
Description
•