Bug 1602116 - Port bug 1601800: remove unneeded nsIWebBrowserPrint argument to nsIPrintingPromptService.showPrintProgressDialog. r=rjl